fixed misaligned buttons

--- a/style.css
+++ b/style.css
@@ -48,7 +48,9 @@ a {
 
 .navbutton {
     width: 100%;
-    height: 170px;
+    height: auto;
+    padding-top: 45%;
+    padding-bottom: 45%;
     margin-top: 50px;
     font-size: 20px;
     cursor: pointer;
